--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,16 @@ XAI_API_KEY=****
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a PostgreSQL database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
+# POSTGRES_URL or DATABASE_URL for Postgres connection
 POSTGRES_URL=****
+# DATABASE_URL=****
 
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+# Danckuts API configuration
+DANCKUTS_API_BASE_URL=http://atlas.danckuts.com
+DANCKUTS_API_TOKEN=****
+
